# kado

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.web  HOW_TO_CREATE_A_PROBLEM.md  LICENSE  README.md  deploy-web.bat  docker-compose.yml
api/: .dockerignore  .gitignore  Cargo.toml  README.md  docker-compose.yml
api/archived_migrations/2021-09-12-183310_test_problems/: up.sql
api/archived_migrations/2021-09-15-225714_fake_users/: down.sql
api/migrations/2021-09-07-233800_user/: up.sql
api/migrations/2021-09-11-150900_teams/: up.sql
api/migrations/2021-09-11-151157_user_team_id/: down.sql  up.sql
api/migrations/2021-09-12-113531_problems/: up.sql
api/migrations/2021-09-12-183310_test_problems/: down.sql  up.sql
api/migrations/2021-09-12-210622_api_tokens/: down.sql
api/migrations/2021-09-14-204259_submissions/: up.sql
api/migrations/2021-09-21-204604_real_problems_sanity_check/: down.sql
api/migrations/2021-09-27-162905_real_problems_maze/: up.sql
api/migrations/2021-09-29-122905_real_problems_king_pinned/: down.sql  up.sql
api/migrations/2021-10-01-122905_real_problems_barrel/: down.sql  up.sql
api/src/: config.rs  lib.rs  main.rs  schema.rs
api/src/blocklists/: mod.rs  slursen.txt
api/src/db/: api_token_repo.rs  mod.rs  offset_limit.rs  pagination.rs  problem_repo.rs  submission_repo.rs  team_repo.rs  transaction_manager.rs  user_repo.rs
api/src/errors/: mod.rs
api/src/guards/: admin_key_guard.rs  authorization_token_guard.rs  mod.rs
api/src/models/: mod.rs
api/src/routes/: admin_routes.rs  api_token_routes.rs  auth_routes.rs  healthcheck_routes.rs  leaderboard_routes.rs  mod.rs  problem_routes.rs  submission_routes.rs  team_routes.rs
api/src/services/: api_token_service.rs  auth_service.rs  crypto_service.rs  file_store_service.rs  logger.rs  (+5 more)
google-jwt-verify/: Cargo.toml
google-jwt-verify/src/: error.rs  jwk.rs
(+409 files in other folders)
