[package]
name = "api"
version = "0.1.0"
authors = ["Barnabás Rátki <barnabas.ratki@gmail.com>"]
edition = "2018"

[dependencies]

# Rocket + Diesel
rocket = "0.4.10"
rocket_cors = { version = "0.5.2", default-features = false }
rocket_codegen = "0.4.10"
diesel = { version = "1.4.6", features = ["postgres", "uuidv07", "chrono"] }
dotenv = "0.15.0"
r2d2-diesel = "1.0.0"
r2d2 = "0.8.9"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
uuid = { version = "0.8.2", features = ["serde"] }
chrono = { version = "0.4.19", features = ["serde"] }
time = "0.1.44"

# Swagger
rocket_okapi = "0.4"
schemars = "0.7"
okapi = { version = "0.4", features = ["derive_json_schema"] }

# Error
thiserror = "1.0.25"
anyhow = "1.0.40"

# Rand
rand = "0.7.3"

# Crypto
sha2 = "0.9.5"
base64 = "0.13.0"
jwt = "0.13.0"
hmac = "0.10"


[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json", "diesel_postgres_pool"]


